   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     tools:context="${packageName}.${activityClass}" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bule_bg"
        >
        <ImageView 
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
             android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/return_icon"
            android:contentDescription="@string/img_desc"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
              android:layout_marginBottom="4dp"
              android:layout_centerInParent="true"
              android:text="@string/setting"
              android:textColor="@color/white"
              android:textSize="24sp"
            />
    </RelativeLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/navigation_bg"
    >
          <LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
              android:divider="@color/navigation_bg"
              android:dividerPadding="1dp"
              >     
           <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            
            >
            <ImageView 
                android:id="@+id/shiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lastpass"
                android:contentDescription="@string/empty"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/shiv"
                android:text="手势密码锁定"
                android:textSize="22sp"
                android:layout_centerVertical="true"
                android:textColor="@color/textColor"/>
            <ImageView 
                android:id="@+id/ivmima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switchno"
                android:contentDescription="@string/empty"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
       </RelativeLayout>
       </LinearLayout>
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="49dp"
          android:id="@+id/hideview"
          android:orientation="vertical"
           android:visibility="gone"
          >
           <LinearLayout 
              android:layout_width="match_parent"
          android:layout_height="1dp"
          android:orientation="horizontal" 
          android:background="@color/navigation_bg"
               ></LinearLayout>
          <LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
              android:divider="@color/navigation_bg"
              android:dividerPadding="1dp"
              
              >     
           <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
           
            >
                <ImageView 
                android:id="@+id/shiv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lastpass"
                android:contentDescription="@string/empty"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:visibility="invisible"
                android:layout_marginBottom="4dp"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/shiv2"
                android:text="设置手势密码"
                android:textSize="22sp"
                android:layout_centerVertical="true"
                android:textColor="@color/textColor"/>
       </RelativeLayout>
           </LinearLayout> 
         </LinearLayout>  
          <LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
              >     
           <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >
                <ImageView 
                android:id="@+id/shiv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clear"
                android:contentDescription="@string/empty"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/shiv3"
                android:text="清除缓存"
                android:textSize="22sp"
                android:layout_centerVertical="true"
                android:textColor="@color/textColor"/>
       </RelativeLayout>
           </LinearLayout> 
           
          <LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
              >     
           <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >
                <ImageView 
                android:id="@+id/shiv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/feedback"
                android:contentDescription="@string/empty"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/shiv4"
                android:text="意见反馈"
                android:textSize="22sp"
                android:layout_centerVertical="true"
                android:textColor="@color/textColor"/>
       </RelativeLayout>
           </LinearLayout> 
           
          <LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
              >     
           <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >
                <ImageView 
                android:id="@+id/shiv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/about"
                android:contentDescription="@string/empty"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/shiv5"
                android:text="关于我们"
                android:textSize="22sp"
                android:layout_centerVertical="true"
                android:textColor="@color/textColor"/>
       </RelativeLayout>
           </LinearLayout> 
          
       
</LinearLayout>

</LinearLayout>
